# dire-rapids

./: .buildinfo  .coverage  .dockerignore  .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  MANIFEST.in  METRICS_README.md  README.md  TEST_INSTRUCTIONS.md  genindex.html  index.html  install_rapids_kernel.sh  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.py  test_atlas_approach.py  test_atlas_scaling.py  test_compare_backends.py  test_comprehensive.py  test_integrated_atlas.py  test_viz.py
.github/workflows/: deploy_docs.yml  monthly-maintenance.yml  pylint.yml  test.yml  tests.yml
_modules/: index.html
_modules/dire_rapids/: atlas_cpu.html  betti_curve.html  dire_cuvs.html  dire_pytorch.html  dire_pytorch_memory_efficient.html  metrics.html  utils.html
_sources/: index.rst.txt
_sources/api/: dire_rapids.atlas_cpu.rst.txt  (+4 more)
api/: dire_rapids.atlas_cpu.html  dire_rapids.atlas_gpu.html  dire_rapids.betti_curve.html  dire_rapids.dire_cuvs.html  dire_rapids.dire_pytorch.html  dire_rapids.dire_pytorch_memory_efficient.html  dire_rapids.metrics.html  dire_rapids.utils.html  modules.html
benchmarking/: README.md  bench_betti.py  bench_deepfake_dim.py  bench_deepfake_text.py  bench_highd_openml.py  bench_intrinsic_dim.py  bench_openml.py  bench_optimizations.py  bench_topology_pareto.py  benchmark_mnist.py  compare_reducers.py  dire_rapids_benchmarks.ipynb  dire_runner.py  profile_pipeline.py  reducer_runner.py
dire_rapids/: BETTI_ALGORITHM.md  METRICS_README.md  __init__.py  atlas_cpu.py  atlas_gpu.py  betti_curve.py  dire_cuvs.py  dire_pytorch.py  dire_pytorch_memory_efficient.py  metrics.py  metrics_atlas.py  metrics_atlas_source.py  metrics_backup.py  presets.py  utils.py
dire_rapids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker/: Dockerfile  README.md
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: README.md  compare_reducers_demo.py  finance_analysis_notebook.py  finance_tick_embedding.py  finance_tick_hierarchical.py  metrics_evaluation.py  metrics_simple_test.py  metrics_swiss_roll.py  reducer_runner_demo.py  reducer_runner_dire_datasets.py
paper/: arxiv_supporting_results.md
results/: highd_openml_results.json  highd_openml_summary.txt  intrinsic_dim_results.json  intrinsic_dim_summary.txt
tasks/: lessons.md  todo.md
tests/: README.md  TEST_INSTRUCTIONS.md  test_atlas_approach.py  test_atlas_scaling.py  test_betti_metrics_blobs.py  test_betti_metrics_circle.py  test_compare_backends.py  test_comprehensive.py  test_cpu_basic.py  test_create_dire.py  test_cuml_pca.py  test_cuvs_1000d.py  test_cuvs_1000d.py.bak  test_cuvs_backend.py  test_cuvs_backend.py.bak  test_cuvs_scaling.py  test_cuvs_scaling.py.bak  test_integrated_atlas.py  test_matrix_structure.py  test_memory_usage.py  test_reducer_runner.py  test_scaling_high_dim.py
(+39 files in other folders)
